修复Jenkins中MaxPermSize参数替换为MetaspaceSize